hotfix: Improved mod installation to handle both archives and DLL files / 改进模组安装以处理压缩包和DLL文件
- Add proxy server selection enum (GhDmrGg, GhProxyCom, HkGhProxyCom, CdnGhProxyCom, EdgeOneGhProxyCom) / 添加代理服务器选择枚举
- Enhanced NetworkService with configurable proxy domains / 增强NetworkService支持可配置代理域名
- Improved mod installation to handle both archives and DLL files / 改进模组安装以处理压缩包和DLL文件
- Fixed script-based installation to pass downloaded file path instead of URL / 修复脚本安装传递下载文件路径而非URL
- Added proxy support for git clone operations in TranslationManagerService / 在TranslationManagerService中添加git克隆代理支持
- Updated UI to show proxy server selection dropdown in settings / 更新UI在设置中显示代理服务器选择下拉框
- Reordered setup wizard steps (language selection first) / 重新排序设置向导步骤（语言选择优先）
- Version bump to 1.0.0-beta.2-hotfix1 / 版本号升级至1.0.0-beta.2-hotfix1

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -1392,6 +1392,24 @@
   <data name="GitHubProxyDescription" xml:space="preserve">
     <value>Use proxy service to accelerate GitHub downloads</value>
   </data>
+  <data name="GitHubProxyServer" xml:space="preserve">
+    <value>Proxy Server</value>
+  </data>
+  <data name="GhDmrGg" xml:space="preserve">
+    <value>gh.dmr.gg (Cloudflare 1)</value>
+  </data>
+  <data name="GhProxyCom" xml:space="preserve">
+    <value>gh-proxy.com (Cloudflare 2)</value>
+  </data>
+  <data name="HkGhProxyCom" xml:space="preserve">
+    <value>hk.gh-proxy.com (Hong Kong)</value>
+  </data>
+  <data name="CdnGhProxyCom" xml:space="preserve">
+    <value>cdn.gh-proxy.com (Fastly)</value>
+  </data>
+  <data name="EdgeOneGhProxyCom" xml:space="preserve">
+    <value>edgeone.gh-proxy.com (Tencent Cloud)</value>
+  </data>
   <data name="GitHubProxyApplied" xml:space="preserve">
     <value>GitHub proxy applied: {0} -&gt; {1}</value>
   </data>
