feat: Add announcement system and improve app stability / 添加公告系统并改进应用稳定性
- Add announcement service for markdown content display / 添加公告服务用于Markdown内容显示
- Add announcement window UI with proper styling / 添加带有适当样式的公告窗口UI
- Improve application shutdown with resource cleanup / 改进应用程序关闭时的资源清理
- Fix GitHub workflow prerelease boolean handling / 修复GitHub工作流
- Enhance main window sizing (1280x720) / 增强主窗口尺寸设置(1280x720)
- Add value converters for UI binding / 添加UI绑定的值转换器
- Update mod view models with new properties / 更新模组视图模型的新属性
- Add comprehensive string resources / 添加完整的字符串资源
- Update version to 1.0.0-beta.3 / 更新版本至1.0.0-beta.3
- Add Markdig package for markdown rendering / 添加Markdig包用于markdown渲染

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -819,6 +819,12 @@
   <data name="ManualMod" xml:space="preserve">
     <value>Manual Mod</value>
   </data>
+  <data name="ManualModUninstall" xml:space="preserve">
+    <value>Manual Mod Uninstall</value>
+  </data>
+  <data name="ManualModUninstallWarning" xml:space="preserve">
+    <value>{0} is a manually installed mod. Are you sure you want to permanently delete all dll files? This action cannot be undone.</value>
+  </data>
   <data name="UninstallingMod_" xml:space="preserve">
     <value>Uninstalling {0}...</value>
   </data>
@@ -1646,5 +1652,83 @@
   </data>
   <data name="BackupModsRecommendation" xml:space="preserve">
     <value>If you already have mods installed, we recommend backing up your MODS folder before using this manager. This will ensure you don't lose any manually installed modifications.</value>
+  </data>
+  <data name="ManualModDeleted" xml:space="preserve">
+    <value>Deleted manual mod file: {0}</value>
+  </data>
+  <data name="GitHubRateLimitTitle" xml:space="preserve">
+    <value>GitHub API Rate Limit</value>
+  </data>
+  <data name="GitHubRateLimitMessage" xml:space="preserve">
+    <value>GitHub API rate limit exceeded. Please try again later.</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="UpdateMod" xml:space="preserve">
+    <value>Update Mod</value>
+  </data>
+  <data name="UpdatingMod" xml:space="preserve">
+    <value>Updating mod: {0} from {1} to {2}</value>
+  </data>
+  <data name="ModUpdatedSuccessfully" xml:space="preserve">
+    <value>Mod updated successfully: {0}</value>
+  </data>
+  <data name="ModUpdateFailed" xml:space="preserve">
+    <value>Failed to update mod: {0}</value>
+  </data>
+  <data name="BackupDirectoryNotExists" xml:space="preserve">
+    <value>Backup directory does not exist, nothing to delete: {0}</value>
+  </data>
+  <data name="DeletedModBackup" xml:space="preserve">
+    <value>Deleted mod backup: {0} version {1}</value>
+  </data>
+  <data name="ExtractingArchive" xml:space="preserve">
+    <value>Extracting archive: {0}</value>
+  </data>
+  <data name="Announcement" xml:space="preserve">
+    <value>Announcement</value>
+  </data>
+  <data name="UpdateAvailable" xml:space="preserve">
+    <value>Update Available</value>
+  </data>
+  <data name="UpdateAvailableMessage" xml:space="preserve">
+    <value>A new version {0} is available. You are currently using version {1}. Would you like to visit the download page?</value>
+  </data>
+  <data name="VisitDownloadPage" xml:space="preserve">
+    <value>Visit Download Page</value>
+  </data>
+  <data name="RemindLater" xml:space="preserve">
+    <value>Remind Later</value>
+  </data>
+  <data name="CheckingForUpdates" xml:space="preserve">
+    <value>Checking for updates...</value>
+  </data>
+  <data name="LoadingAnnouncement" xml:space="preserve">
+    <value>Loading announcement...</value>
+  </data>
+  <data name="AnnouncementLoadFailed" xml:space="preserve">
+    <value>Failed to load announcement</value>
+  </data>
+  <data name="UpdateCheckFailed" xml:space="preserve">
+    <value>Failed to check for updates</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="FetchingAnnouncementFrom" xml:space="preserve">
+    <value>Fetching announcement from: {0}</value>
+  </data>
+  <data name="AnnouncementLoadedSuccessfully" xml:space="preserve">
+    <value>Successfully loaded announcement for language: {0}</value>
+  </data>
+  <data name="AnnouncementContentEmpty" xml:space="preserve">
+    <value>Announcement content is empty for language: {0}</value>
+  </data>
+  <data name="NoAnnouncementAvailable" xml:space="preserve">
+    <value>No announcement available for language: {0}</value>
+  </data>
+  <data name="AnnouncementFetchFailed" xml:space="preserve">
+    <value>Failed to fetch announcement: {0} - {1}</value>
   </data>
 </root>
