--- a/Resources/Strings.zh-CN.resx
+++ b/Resources/Strings.zh-CN.resx
@@ -1,110 +1,52 @@
-<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
+<?xml version='1.0' encoding='utf-8'?>
+<root xmlns:ns1="urn:schemas-microsoft-com:xml-msdata" xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
+  <xs:schema id="root">
+    <xs:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xs:element name="root" ns1:IsDataSet="true">
+      <xs:complexType>
+        <xs:choice maxOccurs="unbounded">
+          <xs:element name="metadata">
+            <xs:complexType>
+              <xs:sequence>
+                <xs:element name="value" type="xsd:string" minOccurs="0" />
+              </xs:sequence>
+              <xs:attribute name="name" use="required" type="xsd:string" />
+              <xs:attribute name="type" type="xsd:string" />
+              <xs:attribute name="mimetype" type="xsd:string" />
+              <xs:attribute ref="xml:space" />
+            </xs:complexType>
+          </xs:element>
+          <xs:element name="assembly">
+            <xs:complexType>
+              <xs:attribute name="alias" type="xsd:string" />
+              <xs:attribute name="name" type="xsd:string" />
+            </xs:complexType>
+          </xs:element>
+          <xs:element name="data">
+            <xs:complexType>
+              <xs:sequence>
+                <xs:element name="value" type="xsd:string" minOccurs="0" ns1:Ordinal="1" />
+                <xs:element name="comment" type="xsd:string" minOccurs="0" ns1:Ordinal="2" />
+              </xs:sequence>
+              <xs:attribute name="name" type="xsd:string" use="required" ns1:Ordinal="1" />
+              <xs:attribute name="type" type="xsd:string" ns1:Ordinal="3" />
+              <xs:attribute name="mimetype" type="xsd:string" ns1:Ordinal="4" />
+              <xs:attribute ref="xml:space" />
+            </xs:complexType>
+          </xs:element>
+          <xs:element name="resheader">
+            <xs:complexType>
+              <xs:sequence>
+                <xs:element name="value" type="xsd:string" minOccurs="0" ns1:Ordinal="1" />
+              </xs:sequence>
+              <xs:attribute name="name" type="xsd:string" use="required" />
+            </xs:complexType>
+          </xs:element>
+        </xs:choice>
+      </xs:complexType>
+    </xs:element>
+  </xs:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -234,9 +176,6 @@
   <data name="ModUninstallError" xml:space="preserve">
     <value>卸载Mod {0} 时出错</value>
   </data>
-  <data name="ModConfigNotFound" xml:space="preserve">
-    <value>未找到Mod {0} 的配置</value>
-  </data>
   <data name="ModEnabled" xml:space="preserve">
     <value>Mod {0} 已启用</value>
   </data>
@@ -345,9 +284,6 @@
   <data name="LanguageSettingError" xml:space="preserve">
     <value>应用语言设置错误</value>
   </data>
-  <data name="ModConfiguration" xml:space="preserve">
-    <value>Mod 配置</value>
-  </data>
   <data name="ConfigurationPresets" xml:space="preserve">
     <value>配置预设</value>
   </data>
@@ -364,7 +300,7 @@
     <value>另存为</value>
   </data>
   <data name="NoConfigurationOptions" xml:space="preserve">
-    <value>无配置选项</value>
+    <value>运行一次游戏并正常退出以生成配置项</value>
   </data>
   <data name="Apply" xml:space="preserve">
     <value>应用</value>
@@ -377,12 +313,6 @@
   </data>
   <data name="PresetNameRequired" xml:space="preserve">
     <value>请输入预设名称</value>
-  </data>
-  <data name="PresetLoaded" xml:space="preserve">
-    <value>已加载预设: {0}</value>
-  </data>
-  <data name="PresetSaved" xml:space="preserve">
-    <value>已保存预设: {0}</value>
   </data>
   <data name="PresetCreated" xml:space="preserve">
     <value>已创建预设: {0}</value>
@@ -401,9 +331,6 @@
   </data>
   <data name="ConfigurationSaveError" xml:space="preserve">
     <value>配置保存失败</value>
-  </data>
-  <data name="OpenConfigurationWindowError" xml:space="preserve">
-    <value>打开配置窗口失败: {0}</value>
   </data>
   <data name="CopySelected" xml:space="preserve">
     <value>复制选中</value>
@@ -552,9 +479,6 @@
   <data name="GameRunning" xml:space="preserve">
     <value>游戏运行中</value>
   </data>
-  <data name="GameRunningDescription" xml:space="preserve">
-    <value>游戏运行时无法操作Mod</value>
-  </data>
   <data name="SetupWizardTitle" xml:space="preserve">
     <value>GHPC Mod Manager 初始化向导</value>
   </data>
@@ -569,12 +493,6 @@
   </data>
   <data name="Step3GameDirectory" xml:space="preserve">
     <value>步骤 3: 游戏目录</value>
-  </data>
-  <data name="Step4MelonLoader" xml:space="preserve">
-    <value>步骤 4: MelonLoader</value>
-  </data>
-  <data name="GameDirectoryPath" xml:space="preserve">
-    <value>游戏目录路径：</value>
   </data>
   <data name="ProgramLogs" xml:space="preserve">
     <value>程序日志</value>
@@ -654,18 +572,6 @@
   <data name="PresetSaved_" xml:space="preserve">
     <value>已保存预设: {0}</value>
   </data>
-  <data name="ScriptModInstallWarning" xml:space="preserve">
-    <value>警告：基于脚本的Mod安装存在安全风险。请只安装来自可信源的Mod。</value>
-  </data>
-  <data name="DoYouWantToContinue" xml:space="preserve">
-    <value>您想要继续吗？</value>
-  </data>
-  <data name="SecurityWarning" xml:space="preserve">
-    <value>安全警告</value>
-  </data>
-  <data name="InvalidModConfiguration" xml:space="preserve">
-    <value>{0} 的Mod配置无效</value>
-  </data>
   <data name="SettingsSavedSuccessfully" xml:space="preserve">
     <value>设置保存成功</value>
   </data>
@@ -683,12 +589,6 @@
   </data>
   <data name="CannotGetTranslationVersions" xml:space="preserve">
     <value>无法获取翻译组件版本</value>
-  </data>
-  <data name="WindowTitle" xml:space="preserve">
-    <value>GHPC助手</value>
-  </data>
-  <data name="GameIsRunning" xml:space="preserve">
-    <value>游戏运行中</value>
   </data>
   <data name="ProgramSettings" xml:space="preserve">
     <value>程序设置</value>
@@ -737,9 +637,6 @@
   </data>
   <data name="ConnectionAbnormal" xml:space="preserve">
     <value>连接异常</value>
-  </data>
-  <data name="RetryCheck" xml:space="preserve">
-    <value>重新检测</value>
   </data>
   <data name="NetworkCheckFailedWarning" xml:space="preserve">
     <value>⚠️ 网络连接检测失败</value>
@@ -813,12 +710,6 @@
   <data name="ConfirmUninstall" xml:space="preserve">
     <value>确认卸载</value>
   </data>
-  <data name="ManualModUninstallMessage" xml:space="preserve">
-    <value>{0} 是手动安装的Mod，请自行前往游戏Mods文件夹删除相关文件。</value>
-  </data>
-  <data name="ManualMod" xml:space="preserve">
-    <value>手动Mod</value>
-  </data>
   <data name="ManualModUninstall" xml:space="preserve">
     <value>手动Mod卸载</value>
   </data>
@@ -839,9 +730,6 @@
   </data>
   <data name="TranslationSystemUninstalledSuccessfully" xml:space="preserve">
     <value>翻译系统卸载成功</value>
-  </data>
-  <data name="ViewSolutions" xml:space="preserve">
-    <value>了解解决方案</value>
   </data>
   <data name="NetworkCheckLog" xml:space="preserve">
     <value>网络检测日志</value>
@@ -1002,12 +890,6 @@
   <data name="Ready" xml:space="preserve">
     <value>就绪</value>
   </data>
-  <data name="LaunchGame" xml:space="preserve">
-    <value>启动游戏</value>
-  </data>
-  <data name="Complete" xml:space="preserve">
-    <value>完成</value>
-  </data>
   <data name="FetchingModI18nConfig" xml:space="preserve">
     <value>正在从 {0} 获取Mod翻译配置</value>
   </data>
@@ -1019,12 +901,6 @@
   </data>
   <data name="Search" xml:space="preserve">
     <value>搜索：</value>
-  </data>
-  <data name="Items" xml:space="preserve">
-    <value>项</value>
-  </data>
-  <data name="ItemsOf" xml:space="preserve">
-    <value>/</value>
   </data>
   <data name="ModI18nConfigLoadedFromCache" xml:space="preserve">
     <value>从缓存加载Mod翻译配置</value>
@@ -1082,9 +958,6 @@
   </data>
   <data name="Status" xml:space="preserve">
     <value>状态</value>
-  </data>
-  <data name="LanguageWillTakeEffectAfterApply" xml:space="preserve">
-    <value>点击应用后语言更改将生效</value>
   </data>
   <data name="LanguageWillTakeEffectAfterRestart" xml:space="preserve">
     <value>应用程序将重启以应用语言更改</value>
@@ -1258,10 +1131,10 @@
     <value>跳过目录树: {0}</value>
   </data>
   <data name="DirectoryAccessWarning" xml:space="preserve">
-    <value>Warning: Could not access subdirectories in {0}: {1}</value>
+    <value>警告: 未能访问子目录 {0}: {1}</value>
   </data>
   <data name="GitDirectoryRemovalWarning" xml:space="preserve">
-    <value>Could not completely remove .git directory: {0}</value>
+    <value>不能完整移除.git目录: {0}</value>
   </data>
   <data name="ChunkDownloadFailed" xml:space="preserve">
     <value>块 {0} 下载失败</value>
@@ -1359,29 +1232,11 @@
   <data name="ForcedUIRefreshComplete" xml:space="preserve">
     <value>UI强制刷新完成</value>
   </data>
-  <data name="AppStartupSettingsTheme" xml:space="preserve">
-    <value>应用启动 - 设置文件中的主题: {0}</value>
-  </data>
-  <data name="AppStartupResourceDictionaryCount" xml:space="preserve">
-    <value>应用启动 - 当前资源字典数量: {0}</value>
-  </data>
-  <data name="SettingsLightThemeConsistent" xml:space="preserve">
-    <value>设置为浅色主题，与App.xaml默认一致，只同步状态</value>
-  </data>
-  <data name="SettingsDarkThemeNeedSwitch" xml:space="preserve">
-    <value>设置为深色主题，需要从默认浅色主题切换</value>
-  </data>
-  <data name="ThemeInitializationComplete" xml:space="preserve">
-    <value>主题初始化完成 - 当前资源字典数量: {0}</value>
-  </data>
   <data name="ThemeApplicationError" xml:space="preserve">
     <value>应用主题时发生错误</value>
   </data>
   <data name="About" xml:space="preserve">
     <value>关于</value>
-  </data>
-  <data name="Version" xml:space="preserve">
-    <value>版本</value>
   </data>
   <data name="ProjectUrl" xml:space="preserve">
     <value>项目地址</value>
@@ -1415,9 +1270,6 @@
   </data>
   <data name="EdgeOneGhProxyCom" xml:space="preserve">
     <value>edgeone.gh-proxy.com (腾讯云)</value>
-  </data>
-  <data name="GitHubProxyApplied" xml:space="preserve">
-    <value>已应用GitHub代理: {0} -&gt; {1}</value>
   </data>
   <data name="GitHubProxyFailed" xml:space="preserve">
     <value>GitHub代理失败 ({0})，回退到原始URL: {1}</value>
@@ -1620,12 +1472,6 @@
   <data name="GitHubReleasesLoadedFromPersistentCache" xml:space="preserve">
     <value>从持久化缓存加载GitHub发布版本: {0}/{1}</value>
   </data>
-  <data name="UsingStaleGitHubReleasesCache" xml:space="preserve">
-    <value>由于API错误使用过期的GitHub发布版本缓存: {0}/{1}</value>
-  </data>
-  <data name="Step0WelcomeTitle" xml:space="preserve">
-    <value>欢迎</value>
-  </data>
   <data name="WelcomeToGHPCModManager" xml:space="preserve">
     <value>欢迎使用 GHPC模组管理器</value>
   </data>
@@ -1665,9 +1511,6 @@
   <data name="Update" xml:space="preserve">
     <value>更新</value>
   </data>
-  <data name="UpdateMod" xml:space="preserve">
-    <value>更新MOD</value>
-  </data>
   <data name="UpdatingMod" xml:space="preserve">
     <value>正在更新MOD: {0} 从 {1} 到 {2}</value>
   </data>
@@ -1689,29 +1532,11 @@
   <data name="Announcement" xml:space="preserve">
     <value>公告</value>
   </data>
-  <data name="UpdateAvailable" xml:space="preserve">
-    <value>有可用更新</value>
-  </data>
-  <data name="UpdateAvailableMessage" xml:space="preserve">
-    <value>新版本 {0} 可用。您当前使用的是版本 {1}。是否访问下载页面？</value>
-  </data>
-  <data name="VisitDownloadPage" xml:space="preserve">
-    <value>访问下载页面</value>
-  </data>
-  <data name="RemindLater" xml:space="preserve">
-    <value>稍后提醒</value>
-  </data>
-  <data name="CheckingForUpdates" xml:space="preserve">
-    <value>正在检查更新...</value>
-  </data>
   <data name="LoadingAnnouncement" xml:space="preserve">
     <value>正在加载公告...</value>
   </data>
   <data name="AnnouncementLoadFailed" xml:space="preserve">
     <value>加载公告失败</value>
-  </data>
-  <data name="UpdateCheckFailed" xml:space="preserve">
-    <value>检查更新失败</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>关闭</value>
@@ -1730,5 +1555,80 @@
   </data>
   <data name="AnnouncementFetchFailed" xml:space="preserve">
     <value>获取公告失败: {0} - {1}</value>
+  </data>
+  <data name="ModsCount" xml:space="preserve">
+    <value>共 {0} 个Mod</value>
+  </data>
+  <data name="ModsFilteredCount" xml:space="preserve">
+    <value>第 {0} / {1} 个Mod</value>
+  </data>
+  <data name="GettingThemeColorsForCurrentTheme" xml:space="preserve">
+    <value>从主题获取主题色: {0}, isDark: {1}</value>
+  </data>
+  <data name="UsingDarkThemeColors" xml:space="preserve">
+    <value>使用暗色主题色: {0}</value>
+  </data>
+  <data name="UsingLightThemeColors" xml:space="preserve">
+    <value>使用亮色主题色: {0}</value>
+  </data>
+  <data name="CheckForModUpdates" xml:space="preserve">
+    <value>检查模组更新</value>
+  </data>
+  <data name="OnlyCheckInstalledMods" xml:space="preserve">
+    <value>仅检查已安装模组</value>
+  </data>
+  <data name="CheckingForModUpdates" xml:space="preserve">
+    <value>正在检查模组更新...</value>
+  </data>
+  <data name="ModUpdateCheckComplete" xml:space="preserve">
+    <value>模组更新检查完成</value>
+  </data>
+  <data name="ModUpdateCheckFailed" xml:space="preserve">
+    <value>模组更新检查失败</value>
+  </data>
+  <data name="NoModUpdatesAvailable" xml:space="preserve">
+    <value>暂无模组更新</value>
+  </data>
+  <data name="ModUpdatesFound" xml:space="preserve">
+    <value>发现 {0} 个模组更新</value>
+  </data>
+  <data name="NoModsToCheck" xml:space="preserve">
+    <value>没有模组需要检查更新</value>
+  </data>
+  <data name="GitHubProxyAcceleration" xml:space="preserve">
+    <value>GitHub代理加速</value>
+  </data>
+  <data name="ProxySettingsApplied" xml:space="preserve">
+    <value>代理设置已成功应用</value>
+  </data>
+  <data name="GitHubProxyEnabled" xml:space="preserve">
+    <value>GitHub代理已启用</value>
+  </data>
+  <data name="GitHubProxyDisabled" xml:space="preserve">
+    <value>GitHub代理已禁用</value>
+  </data>
+  <data name="ProxyServerChanged" xml:space="preserve">
+    <value>代理服务器已更改为: {0}</value>
+  </data>
+  <data name="ApplyingProxyAndRetesting" xml:space="preserve">
+    <value>正在应用代理设置并重新检测网络连接...</value>
+  </data>
+  <data name="ApplyProxySettingsFailed" xml:space="preserve">
+    <value>应用代理设置失败: {0}</value>
+  </data>
+  <data name="ThemeInitializationComplete" xml:space="preserve">
+    <value>主题初始化完成，资源字典数量: {0}</value>
+  </data>
+  <data name="SettingsLightThemeConsistent" xml:space="preserve">
+    <value>设置显示浅色主题，与应用启动状态一致</value>
+  </data>
+  <data name="SettingsDarkThemeNeedSwitch" xml:space="preserve">
+    <value>设置显示暗色主题，正在从浅色主题切换</value>
+  </data>
+  <data name="AppStartupResourceDictionaryCount" xml:space="preserve">
+    <value>应用启动资源字典数量: {0}</value>
+  </data>
+  <data name="AppStartupSettingsTheme" xml:space="preserve">
+    <value>应用启动设置主题: {0}</value>
   </data>
 </root>
