feat: Release version 1.0.1 with enhanced file tracking and translation management /       发布1.0.1版本，增强文件追踪和翻译管理
      - Add comprehensive file operation tracking system / 添加全面的文件操作追踪系统
      - Implement translation plugin management with enable/disable functionality / 实现翻译插件管理的启用/禁用功能
      - Enhance network connectivity testing with proxy and direct connection / 增强网络连接测试的代理和直连功能
      - Improve mod installation process with tracked file operations / 改进模组安装过程的文件操作追踪
      - Add translation backup service and unified manifest support / 添加翻译备份服务和统一清单支持
      - Update resource strings with new translation entries / 更新资源字符串与新翻译条目
      - Enhance mod uninstall/reinstall capabilities for manual mods / 增强手动模组的卸载/重装功能
      - Update version to 1.0.1 stable release / 更新版本到1.0.1正式版

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -1604,9 +1604,6 @@
   <data name="GitHubProxyEnabled" xml:space="preserve">
     <value>GitHub proxy enabled</value>
   </data>
-  <data name="GitHubProxyDisabled" xml:space="preserve">
-    <value>GitHub proxy disabled</value>
-  </data>
   <data name="ProxyServerChanged" xml:space="preserve">
     <value>Proxy server changed to: {0}</value>
   </data>
@@ -1630,5 +1627,65 @@
   </data>
   <data name="AppStartupSettingsTheme" xml:space="preserve">
     <value>App startup settings theme: {0}</value>
+  </data>
+  <data name="TranslationPluginEnabled" xml:space="preserve">
+    <value>Translation plugin enabled</value>
+  </data>
+  <data name="TranslationPluginDisabled" xml:space="preserve">
+    <value>Translation plugin disabled</value>
+  </data>
+  <data name="TranslationPluginToggleFailed" xml:space="preserve">
+    <value>Translation plugin toggle failed</value>
+  </data>
+  <data name="TestingNetworkConnectionThroughProxy" xml:space="preserve">
+    <value>Testing network connection through GitHub proxy: {0}</value>
+  </data>
+  <data name="TestingDirectNetworkConnection" xml:space="preserve">
+    <value>Testing direct network connection to: {0}</value>
+  </data>
+  <data name="NetworkTestSuccessfulViaProxy" xml:space="preserve">
+    <value>Network connectivity test successful via proxy</value>
+  </data>
+  <data name="NetworkTestSuccessfulViaDirect" xml:space="preserve">
+    <value>Network connectivity test successful via direct connection</value>
+  </data>
+  <data name="NetworkTestStatusCode" xml:space="preserve">
+    <value>Network connectivity test returned status code: {0}</value>
+  </data>
+  <data name="NetworkTestFailed" xml:space="preserve">
+    <value>Network connectivity test failed: {0}</value>
+  </data>
+  <data name="Reinstall" xml:space="preserve">
+    <value>Reinstall</value>
+  </data>
+  <data name="TranslationPluginEnabled" xml:space="preserve">
+    <value>Translation Plugin Enabled</value>
+  </data>
+  <data name="TranslationPluginDisabled" xml:space="preserve">
+    <value>Translation Plugin Disabled</value>
+  </data>
+  <data name="EnableTranslationPlugin" xml:space="preserve">
+    <value>Enable Translation Plugin</value>
+  </data>
+  <data name="DisableTranslationPlugin" xml:space="preserve">
+    <value>Disable Translation Plugin</value>
+  </data>
+  <data name="TranslationPluginStatus" xml:space="preserve">
+    <value>Translation Plugin Status</value>
+  </data>
+  <data name="TranslationPluginToggleError" xml:space="preserve">
+    <value>Error toggling translation plugin: {0}</value>
+  </data>
+  <data name="TranslationReleasesFetchError" xml:space="preserve">
+    <value>Error fetching translation releases</value>
+  </data>
+  <data name="TranslationAssetNotFound" xml:space="preserve">
+    <value>Translation asset not found in release</value>
+  </data>
+  <data name="DownloadingTranslationRelease" xml:space="preserve">
+    <value>Downloading translation release: {0}</value>
+  </data>
+  <data name="TranslationPluginToggleFailed" xml:space="preserve">
+    <value>Failed to toggle translation plugin</value>
   </data>
 </root>
